<resources>
    <string name="app_name">yotrabajoconpecs</string>
    <string name="ayuda">AYUDA</string>
    <string name="nav_header_title">Yo trabajo con pecs</string>
    <string name="nav_header_subtitle">plagosh1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="titulo">Titulo</string>

    #sesion
    <string name="bienvenida">
        <item>BIENVENIDO</item>
    </string>
    <string name="bienvenida2">Maximiliano Ramirez Henriquez</string>
    <string-array name="usuario">
        <item>Maximiliano Ramirez</item>
        <item>Paulina Lagos</item>
    </string-array>

    #Formulario
    <string name="pedir_nombre">Nombre:</string>
    <string name="pedir_apellido">Apellidos:</string>
    <string name="pedir_sexo">Sexo:</string>
    <string-array name="sexo">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string name="pedir_rut">RUT:</string>
    <string name="pedir_correo">Correo:</string>
    <string name="pedir_fecha_nacimiento">Fecha de nacimiento:</string>
</resources>
