<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/contentCaja"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <GridView
        android:layout_margin="16dp"
        android:id="@+id/listviewFrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

    </GridView>
</LinearLayout>